Fix trouble with jacoco-maven-plugin